--- a/antora/components/refguide-index/modules/extensions/pages/index/executionlog/applib/app/ExecutionLogMenu.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/executionlog/applib/app/ExecutionLogMenu.adoc
@@ -8,6 +8,8 @@
 ----
 class ExecutionLogMenu {
   public static final String LOGICAL_TYPE_NAME;
+  List<? extends ExecutionLogEntry> findMostRecent()
+  List<? extends ExecutionLogEntry> findAll()
 }
 ----
 
