--- a/antora/components/refguide-index/modules/extensions/pages/index/executionlog/applib/contributions/HasInteractionId_executionLogEntries.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/executionlog/applib/contributions/HasInteractionId_executionLogEntries.adoc
@@ -7,8 +7,8 @@
 .HasInteractionId_executionLogEntries.java
 ----
 class HasInteractionId_executionLogEntries {
-  List<ExecutionLogEntry> act()
-  boolean hideAct()
+  List<? extends ExecutionLogEntry> coll()
+  boolean hideColl()
 }
 ----
 
