--- a/antora/components/refguide-index/modules/applib/pages/index/services/user/ImpersonatedUserHolder.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/user/ImpersonatedUserHolder.adoc
@@ -3,7 +3,7 @@
 
 Used by the framework's default implementation of xref:refguide:applib:index/services/user/UserService.adoc[UserService] to allow the current user to be temporarily impersonated.
 
-The intention is that viewers provide an implementation of this service.. Note that the Wicket viewer _does_ implement this service and uses an _HttpSession_ ; this will have the side-effect
+The intention is that viewers provide an implementation of this service. Note that the Wicket viewer _does_ implement this service and uses an _HttpSession_ ; this will have the side-effect
 
 == API
 
