--- a/antora/components/refguide-index/modules/applib/pages/index/value/semantics/Renderer.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/value/semantics/Renderer.adoc
@@ -9,6 +9,7 @@
 interface Renderer<T> {
   String titlePresentation(ValueSemanticsProvider.Context context, T value)     // <.>
   String htmlPresentation(ValueSemanticsProvider.Context context, T value)     // <.>
+  SyntaxHighlighter syntaxHighlighter()     // <.>
 }
 ----
 
@@ -22,6 +23,11 @@ The value in its read-only summarizing text presentation form. (title form)
 --
 The value rendered as HTML.
 --
+<.> xref:#syntaxHighlighter_[syntaxHighlighter()]
++
+--
+Governs whether, to switch on client-side syntax highlighting.
+--
 
 == Members
 
@@ -34,3 +40,8 @@ The value in its read-only summarizing text presentation form. (title form)
 === htmlPresentation(ValueSemanticsProvider_Context, T)
 
 The value rendered as HTML.
+
+[#syntaxHighlighter_]
+=== syntaxHighlighter()
+
+Governs whether, to switch on client-side syntax highlighting.
