--- a/antora/components/refguide-index/modules/core/pages/index/runtimeservices/publish/ObjectLifecyclePublisherDefault.adoc
+++ b/antora/components/refguide-index/modules/core/pages/index/runtimeservices/publish/ObjectLifecyclePublisherDefault.adoc
@@ -7,14 +7,14 @@
 .ObjectLifecyclePublisherDefault.java
 ----
 class ObjectLifecyclePublisherDefault {
-  ObjectLifecyclePublisherDefault(EventBusService eventBusService, EntityPropertyChangePublisher entityPropertyChangePublisher)
-  void onPostCreate(ManagedObject domainObject)
-  void onPrePersist(ManagedObject entity)
-  void onPreUpdate(ManagedObject entity, Can<PropertyChangeRecord> changeRecords)
-  void onPreRemove(ManagedObject entity)
-  void onPostPersist(ManagedObject entity)
-  void onPostUpdate(ManagedObject entity)
+  LifecycleCallbackNotifier lifecycleCallbackNotifier()
+  void onPostCreate(ManagedObject entity)
   void onPostLoad(ManagedObject entity)
+  void onPrePersist(ManagedObject entity)
+  void onPostPersist(ManagedObject entity)
+  void onPreUpdate(ManagedObject entity, Can<PropertyChangeRecord> changeRecords)
+  void onPostUpdate(ManagedObject entity)
+  void onPreRemove(ManagedObject entity)
 }
 ----
 
