--- a/antora/components/refguide-index/modules/persistence/pages/index/jdo/datanucleus/IsisModulePersistenceJdoDatanucleus.adoc
+++ b/antora/components/refguide-index/modules/persistence/pages/index/jdo/datanucleus/IsisModulePersistenceJdoDatanucleus.adoc
@@ -8,7 +8,7 @@
 ----
 class IsisModulePersistenceJdoDatanucleus {
   DnJdoDialect getDnJdoDialect(DataSource dataSource)     // <.>
-  LocalPersistenceManagerFactoryBean getLocalPersistenceManagerFactoryBean(IsisConfiguration isisConfiguration, DataSource dataSource, MetaModelContext metaModelContext, EventBusService eventBusService, Provider<EntityChangeTracker> entityChangeTrackerProvider, IsisBeanTypeRegistry beanTypeRegistry, DatanucleusSettings dnSettings)
+  LocalPersistenceManagerFactoryBean getLocalPersistenceManagerFactoryBean(IsisConfiguration isisConfiguration, DataSource dataSource, MetaModelContext metaModelContext, ObjectLifecyclePublisher objectLifecyclePublisher, IsisBeanTypeRegistry beanTypeRegistry, DatanucleusSettings dnSettings)
   TransactionAwarePersistenceManagerFactoryProxy getTransactionAwarePersistenceManagerFactoryProxy(MetaModelContext metaModelContext, LocalPersistenceManagerFactoryBean localPmfBean, IsisBeanTypeRegistry beanTypeRegistry, List<JdoEntityDiscoveryListener> jdoEntityDiscoveryListeners, DatanucleusSettings dnSettings)
   JdoTransactionManager getTransactionManager(JdoDialect jdoDialect, LocalPersistenceManagerFactoryBean localPmfBean)
   TransactionInterceptorFactory getTransactionInterceptorFactory()     // <.>
