ISIS-3123: adoc templating: fill in remaining vars

--- a/tooling/metaprog/src/main/resources/jpa/$TemplateJpa-description.adoc
+++ b/tooling/metaprog/src/main/resources/jpa/$TemplateJpa-description.adoc
@@ -5,7 +5,7 @@
 TODO this yet is just a copy from JDO
 ====
 
-JDO supports `java.util.UUID` out-of-the-box, so no special annotations are required.
+JDO supports `#{showcase-type}` out-of-the-box, so no special annotations are required.
 
 [source,java]
 ----
