--- a/tooling/metaprog/src/main/resources/$Templates-common.adoc
+++ b/tooling/metaprog/src/main/resources/$Templates-common.adoc
@@ -2,7 +2,7 @@
 
 == Mixin actions
 
-A number of mixin actions contribute through the `JavaUtilUuidHolder` interface, demonstrate the use of `java.util.UUID` as a parameter and as a return type.
+A number of mixin actions contribute through the `#{showcase-name}Holder` interface, demonstrate the use of `#{showcase-type}` as a parameter and as a return type.
 For example:
 
 * the `updateReadOnlyProperty` action is:
@@ -48,7 +48,7 @@ include::holder/$TemplateHolder_mixinProperty.java[tags=class]
 
 == @PropertyLayout(labelPosition=...)
 
-To demonstrate support for label positions using `@PropertyLayout(labelPosition=...)`, the entity and view model objects both implement the extended `JavaUtilUuidHolder2` interface:
+To demonstrate support for label positions using `@PropertyLayout(labelPosition=...)`, the entity and view model objects both implement the extended `#{showcase-name}Holder2` interface:
 
 [source,java]
 ----
