--- a/tooling/metaprog/src/main/resources/$Templates-description.adoc
+++ b/tooling/metaprog/src/main/resources/$Templates-description.adoc
@@ -1,11 +1,11 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The framework has built-in support for the `java.util.UUID` data type.
+The framework has built-in support for the `#{showcase-type}` data type.
 
 From here you can:
 
-* navigate to an entity that uses the `java.util.UUID` datatype
-* open a view model that uses the `java.util.UUID` datatype
+* navigate to an entity that uses the `#{showcase-type}` datatype
+* open a view model that uses the `#{showcase-type}` datatype
 
 Some properties on these domain objects are mandatory, some optional.
 
@@ -13,17 +13,17 @@ Some properties on these domain objects are mandatory, some optional.
 
 The entity and view model types both implement some common interfaces.
 
-=== JavaUtilUuidHolder
+=== #{showcase-name}Holder
 
-The `JavaUtilUuidHolder` interface is used to contribute a number of mixins to both types:
+The `#{showcase-name}Holder` interface is used to contribute a number of mixins to both types:
 
 [source,java]
 ----
 include::holder/$TemplateHolder.java[tags=class]
 ----
 
-=== JavaUtilUuidHolder2
+=== #{showcase-name}Holder2
 
-The `JavaUtilUuidHolder2` interface is used to demonstrate support for label positions using `@PropertyLayout(labelPosition=...)`.
+The `#{showcase-name}Holder2` interface is used to demonstrate support for label positions using `@PropertyLayout(labelPosition=...)`.
 
 Further details, along with the effect of this annotation, can be seen on the entity and view model object pages.
