ISIS-3123: templates: support jdo/jpa/jaxb type support notices

--- a/tooling/metaprog/src/main/resources/jdo/$TemplateJdo-description.adoc
+++ b/tooling/metaprog/src/main/resources/jdo/$TemplateJdo-description.adoc
@@ -2,7 +2,7 @@
 
 //#{generated-file-notice}
 
-JDO supports `#{showcase-type}` out-of-the-box, so no special annotations are required.
+#{jdo-type-support-notice}
 
 [source,java]
 ----
