--- a/tooling/metaprog/src/main/resources/vm/$TemplateVm-description.adoc
+++ b/tooling/metaprog/src/main/resources/vm/$TemplateVm-description.adoc
@@ -2,7 +2,7 @@
 
 //#{generated-file-notice}
 
-JAXB supports `#{showcase-type}` out-of-the-box, so no special annotations are required.
+#{jaxb-type-support-notice}
 
 [source,java]
 ----
