--- a/tooling/metaprog/src/main/resources/jpa/$TemplateJpa-description.adoc
+++ b/tooling/metaprog/src/main/resources/jpa/$TemplateJpa-description.adoc
@@ -2,24 +2,19 @@
 
 //#{generated-file-notice}
 
-[WARNING]
-==== 
-TODO this yet is just a copy from JDO
-====
-
-JDO supports `#{showcase-type}` out-of-the-box, so no special annotations are required.
+#{jpa-type-support-notice}
 
 [source,java]
 ----
 include::$TemplateJpa.java[tags=class]
 ----
-<.> a no-arg constructor is introduced by JDO enhancer
-<.> required property as defined to JDO/DataNucleus.
+<.> a no-arg constructor for convenience
+<.> required property as defined to JPA.
 +
 Apache Isis assumes properties are mandatory, so no additional annotation is required.
 <.> directly editable property as defined to Apache Isis
 <.> optional property as defined to Apache Isis
-<.> optional property as defined to JDO/DataNucleus
+<.> optional property as defined to JPA
 
 
 include::../$Templates-common.adoc[]
