ISIS-3123: adds primitive templates; convert long showcase to generated

--- a/examples/demo/domain/src/main/java/demoapp/dom/types/isis/blobs/IsisBlobs-common.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/types/isis/blobs/IsisBlobs-common.adoc
@@ -61,6 +61,6 @@ include::holder/IsisBlobHolder2.java[tags=class]
 <.> Position label to the right
 +
 CAUTION: currently not supported
-<.> Hide the label compleely.
+<.> Hide the label completely.
 
 
