--- a/examples/demo/domain/src/main/java/demoapp/dom/types/javalang/booleans/WrapperBooleans-common.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/types/javalang/booleans/WrapperBooleans-common.adoc
@@ -60,4 +60,4 @@ include::holder/WrapperBooleanHolder2.java[tags=class]
 <.> Using `@PropertyLayout(fieldSetId=...)` positions the properties into the appropriate `<field-set>` within the `Xxx.layout.xml` layout file.
 <.> Position label on top
 <.> Position label to the right
-<.> Hide the label compleely.
+<.> Hide the label completely.
