--- a/examples/demo/domain/src/main/java/demoapp/dom/types/javalang/shorts/WrapperShorts-common.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/types/javalang/shorts/WrapperShorts-common.adoc
@@ -64,5 +64,5 @@ include::holder/WrapperShortHolder2.java[tags=class]
 <.> Position label to the right
 +
 CAUTION: currently not supported
-<.> Hide the label compleely.
+<.> Hide the label completely.
 
