--- a/examples/demo/domain/src/main/java/demoapp/dom/types/javanet/urls/JavaNetUrls-common.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/types/javanet/urls/JavaNetUrls-common.adoc
@@ -62,4 +62,4 @@ include::holder/JavaNetUrlHolder2.java[tags=class]
 <.> Position label to the right
 +
 CAUTION: currently not supported
-<.> Hide the label compleely.
+<.> Hide the label completely.
