--- a/tooling/metaprog/src/main/resources/$Templates-common~primitive.adoc
+++ b/tooling/metaprog/src/main/resources/$Templates-common~primitive.adoc
@@ -1,37 +1,32 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
+//#{generated-file-notice}
+
 == Mixin actions
 
-A number of mixin actions contribute through the `IsisClobHolder` interface, demonstrate the use of `Clob` as a parameter and as a return type.
+A number of mixin actions contribute through the `#{showcase-name}Holder` interface, demonstrate the use of `#{showcase-type}` as a parameter and as a return type.
 For example:
 
 * the `updateReadOnlyProperty` action is:
 +
 [source,java]
 ----
-include::holder/IsisClobHolder_updateReadOnlyProperty.java[tags=class]
-----
-
-* the `updateReadOnlyOptionalProperty` action is:
-+
-[source,java]
-----
-include::holder/IsisClobHolder_updateReadOnlyOptionalProperty.java[tags=class]
+include::holder/$TemplateHolder_updateReadOnlyProperty.java[tags=class]
 ----
 
 * the `actionReturning` action is:
 +
 [source,java]
 ----
-include::holder/IsisClobHolder_actionReturning.java[tags=class]
+include::holder/$TemplateHolder_actionReturning.java[tags=class]
 ----
 
 
-* the `actionReturningCollection` action is:
+* the `actionReturningArray` action is:
 +
 [source,java]
 ----
-include::holder/IsisClobHolder_actionReturningCollection.java[tags=class]
+include::holder/$TemplateHolder_actionReturningArray.java[tags=class]
 ----
 
 == Mixin properties
@@ -42,17 +37,17 @@ We also use the interface to contribute a mixin property:
 +
 [source,java]
 ----
-include::holder/IsisClobHolder_mixinProperty.java[tags=class]
+include::holder/$TemplateHolder_mixinProperty.java[tags=class]
 ----
 
 
 == @PropertyLayout(labelPosition=...)
 
-There is also an extended interface, `IsisClobHolder2`, with default methods demonstrating the use of label positions:
+To demonstrate support for label positions using `@PropertyLayout(labelPosition=...)`, the entity and view model objects both implement the extended `#{showcase-name}Holder2` interface:
 
 [source,java]
 ----
-include::holder/IsisClobHolder2.java[tags=class]
+include::holder/$TemplateHolder2.java[tags=class]
 ----
 
 <.> The default methods have annotations that are automatically inherited.
@@ -63,3 +58,4 @@ include::holder/IsisClobHolder2.java[tags=class]
 +
 CAUTION: currently not supported
 <.> Hide the label completely.
+
