--- a/antora/components/refguide-index/modules/applib/pages/index/services/queryresultscache/hooks/QueryResultsCache_020-examples-and-usage.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/queryresultscache/hooks/QueryResultsCache_020-examples-and-usage.adoc
@@ -53,3 +53,7 @@ If however every order is for a different product, then no benefit will be gaine
 == Related Services
 
 The xref:refguide:applib:index/services/scratchpad/Scratchpad.adoc[Scratchpad] service is also intended for actions that are called many times, allowing arbitrary information to be shared between them.
+
+Note that the scope of xref:refguide:applib:index/services/queryresultscache/QueryResultsCache.adoc[] is for a single interaction, so is short-lived.
+If you want longer-lived caching, then you may be able to use Spring's cache support, such as `@Cacheable`.
+For more details, check out the relevant link:https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#io.caching[Spring Boot] and link:https://docs.spring.io/spring-framework/docs/5.3.22/reference/html/integration.html#cache[Spring Framework] documentation on the topic.
